--- a/Rx+Retrofit/app/build.gradle
+++ b/Rx+Retrofit/app/build.gradle
@@ -27,6 +27,9 @@ dependencies {
     testCompile "junit:junit:$junitVer"
 
     compile "com.android.support:appcompat-v7:$supportLibVer"
+    compile "com.android.support:recyclerview-v7:$supportLibVer"
+
+    //rx
     compile "io.reactivex.rxjava2:rxandroid:$rxAndroidVer"
     compile "io.reactivex.rxjava2:rxjava:$rxJavaVer"
 
