--- a/Rx+Retrofit/app/build.gradle
+++ b/Rx+Retrofit/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     //rx
     compile "io.reactivex.rxjava2:rxandroid:$rxAndroidVer"
     compile "io.reactivex.rxjava2:rxjava:$rxJavaVer"
+    compile "com.squareup.retrofit2:adapter-rxjava2:$retrofitCallAdapterVer"
 
     //retrofit
     compile "com.google.code.gson:gson:$gsonVer"
