--- a/RxOperators/app/src/main/AndroidManifest.xml
+++ b/RxOperators/app/src/main/AndroidManifest.xml
@@ -34,6 +34,8 @@
         </activity>
         <activity android:name=".ui.transformation.WindowActivity">
         </activity>
+        <activity android:name=".ui.combination.MergeActivity">
+        </activity>
     </application>
 
 </manifest>
