--- a/RxOperators/app/build.gradle
+++ b/RxOperators/app/build.gradle
@@ -50,4 +50,5 @@ dependencies {
     annotationProcessor "com.jakewharton:butterknife-compiler:$butterknifeVer"
 
 //    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
 }
